src/test/ui/issues/30000-39999/issue-36708.stderr
error[E0049]: method `foo` has 1 type parameter but its trait declaration has 0 type parameters
  --> $DIR/issue-36708.rs:8:12
   |
LL |     fn foo<T>() {}
   |            ^ found 1 type parameter, expected 0

error: aborting due to previous error

For more information about this error, try `rustc --explain E0049`.
